Fixed some issues on smaller resolutions

--- a/resources/css/style.css
+++ b/resources/css/style.css
@@ -246,6 +246,26 @@ img {
 
 	#home{
 		display: block;
+		position: relative;
+		text-align: center; 
+		width: 90%;
+	}
+
+	#home h3 {
+		float: none;
+	}
+
+	#home p {
+		text-align: left; 
+		//width: 80%;
+	}
+
+	body img {
+		padding: 0px;
+		margin: 0px;
+		text-align: center; 
+		right: 0;
+		bottom: 0;
 	}
 
 	img {
@@ -278,5 +298,5 @@ img {
 	right: 4px;
 	padding: 0px 0px;
 	margin: 20px 0px;
-}
+	}
 }
